# Zapret-Hub-Mac

./: .gitignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
AppIcon.icon/: icon.json
H.icon/: icon.json
ZapretHubMac.xcodeproj/: project.pbxproj
ZapretHubMac.xcodeproj/xcshareddata/xcschemes/: Zapret Hub Mac.xcscheme
packaging/: zapret_hub_mac.spec
resources/profiles/: system.json  telegram-priority.json
resources/ui_assets/icons/: app.icns
scripts/: apply_xcode_icon_assets.sh  build_app.sh  build_dmg.sh  build_macos_icons.py  build_universal.sh  build_xcode_app.sh
src/zapret_hub_mac/: __init__.py  app.py  bootstrap.py  main.py
src/zapret_hub_mac/domain/: __init__.py  models.py
src/zapret_hub_mac/runtime/: mac_proxy_engine.py  tg_ws_proxy_runner.py
src/zapret_hub_mac/services/: autostart.py  components.py  diagnostics.py  files.py  logging_service.py  merge.py  profiles.py  settings.py  spoofdpi.py  storage.py  system_proxy.py  updates.py  worker_dispatcher.py  zapret_macos.py
src/zapret_hub_mac/ui/: __init__.py  main_window.py  motion.py  theme.py  widgets.py
xcode/Wrapper/: Info.plist  main.swift
